@@ -1,5 +1,6 @@
 0.05
  - Add Dicom::DCMTK::DCMDump::Get in 0.02 version.
+ - Add Dicom::DCMTK::DCMQRSCP::Config in 0.02 version.
  - Fix version in Task.pm.
 
 0.01 2015-10-01T14:09:05+02:00
